--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "@prisma/client": "^5.17.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cron": "^3.1.7",
+    "date-fns-tz": "^3.1.3",
     "puppeteer": "^22.15.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1"
